--- a/ci4/.env
+++ b/ci4/.env
@@ -20,7 +20,7 @@ CI_ENVIRONMENT = development
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'http://localhost/lab3/ci4/public/'
+app.baseURL = 'http://apcwebprog.csf.ph/~sphernandez/lab3/ci4/public/news'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
@@ -30,10 +30,10 @@ app.baseURL = 'http://localhost/lab3/ci4/public/'
 # DATABASE
 #--------------------------------------------------------------------
 
-database.default.hostname = localhost
-database.default.database = mydb
-database.default.username = mydb
-database.default.password = 
+database.default.hostname = 192.168.150.213
+database.default.database = webprogss211
+database.default.username = webprogss211
+database.default.password = fancyR!ce36
 database.default.DBDriver = MySQLi
 # database.default.DBPrefix =
 # database.default.port = 3306
